k8s/istio-ui.yaml
# mock API k8s.gcr.io/echoserver:1.4

kind: Deployment
apiVersion: apps/v1
metadata:
  name: kue-service-projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kue-service-projects
  template:
    metadata:
      labels:
        app: kue-service-projects
    spec:
      containers:
        - name: kue-service-projects
          image: kue-service-projects
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
      restartPolicy: Always

---

kind: Service
apiVersion: v1
metadata:
  name: kue-service-projects
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: kue-service-projects

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kue-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kue-ui
  template:
    metadata:
      labels:
        app: kue-ui
    spec:
      containers:
        - name: kue-ui
          image: kue-ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
  
---

kind: Service
apiVersion: v1
metadata:
  name: kue-ui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: kue-ui

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: client
spec:
  host: kue-ui
  # subsets:
  # - name: v1
  #   labels:
  #     version: v1

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - name: "Hello API route"
      match:
      - uri:
          prefix: /api/projects
      route:
      - destination:
          host: kue-service-projects.default.svc.cluster.local
          port:
            number: 80

    - name: "Kue UI"
      route:
      - destination:
          host: kue-ui.default.svc.cluster.local
          port:
            number: 80
  # - route:
  #   - destination:
  #       host: server
  #       port:
  #         number: 8080
  #       subset: v1
  #   corsPolicy:
  #     allowOrigin:
  #       - "*"
  #     allowMethods:
  #       - POST
  #       - GET
  #       - OPTIONS
  #       - PUT
  #       - DELETE
  #     allowHeaders:
  #       - grpc-timeout
  #       - content-type
  #       - keep-alive
  #       - user-agent
  #       - cache-control
  #       - content-type
  #       - content-transfer-encoding
  #       - custom-header-1
  #       - x-accept-content-transfer-encoding
  #       - x-accept-response-streaming
  #       - x-user-agent
  #       - x-grpc-web
  #     maxAge: 1728s
  #     exposeHeaders:
  #       - custom-header-1
  #       - grpc-status
  #       - grpc-message
