k8s/ui.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kue-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kue-ui
  template:
    metadata:
      labels:
        app: kue-ui
    spec:
      containers:
        - name: kue-ui
          image: kue-ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always

---

kind: Service
apiVersion: v1
metadata:
  name: kue-ui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: kue-ui

---

# k8s.gcr.io/echoserver:1.4


apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
        version: v1
    spec:
      containers:
      - name: hello-api
        image: k8s.gcr.io/echoserver:1.4
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: hello-api
  labels:
    app: hello-api
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  selector:
    app: hello-api
---

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kue-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-api
spec:
  hosts:
  - "*"
  gateways:
  - kue-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        port:
          number: 9000
        host: hello-api
